src/components/myColors/myColors.css
/*SPDX-License-Identifier: GPL-3.0-or-later*/
@import "../../variables.css";

.adaptive-bar {
  background-color: var(--base-color-light-grey);
  display: grid;
}

@media screen and (min-width: 1400px) {
    .adaptive-bar {
        border-right: 2px groove var(--base-color-dark-grey);
        grid-template-areas: "togglebutton" "colorlist" "addbutton";
        grid-template-rows: 82px 1fr 82px;
        height: 100vh;
    }
}

@media not screen and (min-width: 1400px) {
    .adaptive-bar {
        border-bottom: 2px groove var(--base-color-dark-grey);
        grid-template-areas: "togglebutton colorlist addbutton";
        grid-template-columns: 82px 1fr 150px;
        height: 100px;
        width: 100vw;
    }
}

.adaptive-color-list {
  gap: 1rem;
  grid-area: colorlist;
  padding: 0;
}

@media screen and (min-width: 1400px) {
    .adaptive-color-list {
        display: flex;
        flex-direction: column;
        margin: 0 1rem 0 1rem;
        overflow-x: hidden;
        overflow-y: scroll;
    }
}

@media not screen and (min-width: 1400px) {
    .adaptive-color-list {
        flex-wrap: nowrap;
        margin: 1rem;
        overflow-x: scroll;
        overflow-y: hidden; 
    }
}

.my-color-list-item {
  padding: 0;
}

.toggle-button {
  grid-area: togglebutton;
  width: 50px;
  height: 50px;
  margin: 1rem; 
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
}

.addColorButton{
  grid-area: addbutton;
  padding: .7rem 0.7rem 0.7rem .7rem;
  font-size: 12px;
  height: 50px;
  margin: 1rem; 
  display: flex;
  align-items: center;
  justify-content: center;
}

